<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">展恒基金网</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="planet_prompt1">Choose a planet</string>
    <string name="funddetail_stagerise">&lt;基金业绩&gt;年度业绩表现</string>
    <string name="fund_riskindicator">&lt;基金业绩&gt;风险指标</string>
    <string name="fund_assetallocation">&lt;持仓分析&gt;资产配置分布(</string>
    <string name="fund_awkwardnesstop10">&lt;持仓分析&gt;十大重仓股明细</string>
    <string name="intro_club_1">&#160;&#160;&#160;&#160;&#160;&quot;财立方&quot;俱乐部是展恒为国内财富管理领域的有志之士提供的创业平台。</string>
    <string name="intro_club_2">&#160;&#160;&#160;&#160;&#160;&quot;财立方&quot;通过向会员提供专业、全面的培训和产品支持，惠及众多有创业热情的俱乐部会员及其有理财需求的客户人群，力求实现会员、客户、展恒&quot;财富三赢&quot;。</string>
    <string name="fund_awkwardnesstop5">&lt;持仓分析&gt;五大重仓债券明细</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="image_desc">图片</string>
    <string name="sm_item_fl_weibo">关注新浪微博</string>
    <string name="sm_item_fl_tc">关注腾讯微博</string>
    <string name="wave">1.波动幅度：越小越平稳，风险越小。波动幅度，即标准差，基金增长率的波动情况，也是平均涨跌幅度的变化；</string>
    <string name="index">2.贝塔系数：小于1，风险愈小。因为贝塔系数是衡量基金报酬率与相对指数报酬率的敏感程度,譬如全体市场的贝塔系数为1,那么指数型基金，其β系数就是1；若基金净值的波动大于1,表示该基金的波动风险高过整体市场；</string>
    <string name="about">3.相关系数：代表和大盘的相关性，如果是1，表示和大盘完全相关。</string>
    <string name="mobile">400-888-6661</string>
    <string name="bank">民生银行保障安全</string>
    <string name="reminder1">1.认购期间资产暂不显示，待该基金成立以后一并显示。</string>
    <string name="reminder2">2.每个交易日的最新净值、参考市值、浮动盈亏于次一交易日9:00-12:00更新。</string>
    <string name="risklevel">请购买适合自己风险承受能力的基金，如果基金风险等级超过自身风险承受能力，请谨慎购买。</string>
    <string name="risklevel05">激进型投资者：在基金投资中，您通常专注于投资的长期增值，并愿意为此承受较大的风险。短期的投资波动并不会对您造成大的影响，追求超高的回报才是您关注的目标。 </string>
    <string name="risklevel04">积极型投资者：在基金投资中，您渴望有较高的投资收益，但又不愿承受较大的风险；可以承受一定的投资波动，但是希望自己的投资风险小于市场的整体风险。您有较高的收益目标，且对风险有清醒的认识。</string>
    <string name="risklevel03">稳健型投资者：在基金投资的过程中，风险较小的情况下获得一定的收益是您主要的投资目的。您通常愿意使本金面临一定的风险，但在做投资决定时，会仔细地对将要面临的风险进行认真的分析。总体来看，您愿意承受市场的平均风险。</string>
    <string name="risklevel02">保守型投资者：稳定是您首要考虑的因素之一。在基金投资中，您希望在保证本金安全的基础上能有一些增值收入。追求较低的风险，对投资回报的要求不是太高。</string>
    <string name="risklevel01">安逸型投资者：在基金投资过程中，保护本金不受损失和保持资产的流动性是您的首要目标。您对投资的态度是希望投资益稳定，不愿或不能承担高风险以换取高收益，通常不太在意资金是否有较大增值，追求稳定。 有的投资者可能并不认为自己属于安逸型一类，但因为年龄或家累的缘故，抗风险能力实际并不强，此时，获取稳定回报应当成为投资的首要考虑。 </string>
    <string name="risklevel05_accept">风险承受能力：高</string>
    <string name="risklevel04_accept">风险承受能力：中高</string>
    <string name="risklevel03_accept">风险承受能力：中</string>
    <string name="risklevel02_accept">风险承受能力：较低</string>
    <string name="risklevel01_accept">风险承受能力：低 </string>
    <string name="risklevel05_return">获利期待：高回报率</string>
    <string name="risklevel04_return">获利期待：中高回报率 </string>
    <string name="risklevel03_return">获利期待：中等回报率</string>
    <string name="risklevel02_return">获利期待：稳定的投资收益</string>
    <string name="risklevel01_return">获利期待：很稳定的投资收益 </string>
    <string name="remitreminder">由于汇款到账需要时间，建议您在下单日13:00前汇出资金，15:00前未足额资金到账，可能导致交易失败，请严格按照下方提示操作： </string>
    <string name="remitstep01">第一步： “收款人”填写为“北京展恒基金销售有限公司”； 账号填写为“0101014170028026”； 开户行名称“中国民生银行总行营业部”。  </string>
    <string name="remitstep02">第二步： 汇款附言的“用途”（从“用途”的下拉框选择“手工录入”）和“附言”每次汇款时都必须填写 开通展恒汇款支付时预留的银行卡（账）号（必须正确、完整地填写全部的银行卡号，不能用*代替，多余数字不要填），否则汇款资金将无人认领。 （如果选择转账汇款支付方式，请选择“转账快汇”业务，以确保支付款项于交易当日15:00前及时到账） </string>
    <string name="remitstep03">第三步： 付款卡（账）号必须选择投资者开通展恒基金汇款支付所使用的银行卡（账）号： </string>
    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    <string name="title_activity_maina">MainActivity</string>
    <string name="title_activity_myfundsearch">Myfundsearch</string>
    <string name="title_activity_my_optimize">MyOptimize</string>
    <string name="title_activity_qustion">QustionActivity</string>

</resources>