<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/public_header" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wave"
        android:textSize="15sp"
         />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/index"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="15sp"
        />

</LinearLayout>