<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#f2f2f2"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingLeft="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fund_assetallocation"
                android:textSize="18sp" />

            <com.myfp.myfund.ui.view.AlwaysMarqueeTextView
                android:id="@+id/tv_proportionDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="2013-09-10"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=")"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:padding="15dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.myfp.myfund.ui.view.CustomProgressView
                    android:id="@+id/cpview"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp" >

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="#EB6876" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="股票" />

                <TextView
                    android:id="@+id/tv_value_stock"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="股票" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="#F9AF34" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="货币" />

                <TextView
                    android:id="@+id/tv_value_currency"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="货币" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="#8783D7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="债券" />

                <TextView
                    android:id="@+id/tv_value_bond"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="债券" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="#00B8EE" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="其他" />

                <TextView
                    android:id="@+id/tv_value_other"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="其他" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#f2f2f2"
            android:gravity="bottom"
            android:paddingBottom="3dp"
            android:paddingLeft="20dp"
            android:text="@string/fund_awkwardnesstop10"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="股票代码"
                    android:textColor="#666" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="股票名称"
                    android:textColor="#666" />

                <com.myfp.myfund.ui.view.AlwaysMarqueeTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="市值(万元)"
                    android:textColor="#666" />

                <com.myfp.myfund.ui.view.AlwaysMarqueeTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="right"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="占净资产比"
                    android:textColor="#666" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ddd" />

            <ListView
                android:id="@+id/lv_stock_top10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:text="合计"
                    android:textColor="#666"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_stock_totalMarketValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#f00"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_stock_totalRatio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="#f00"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#f2f2f2"
            android:gravity="bottom"
            android:paddingBottom="3dp"
            android:paddingLeft="20dp"
            android:text="@string/fund_awkwardnesstop5"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="债券代码"
                    android:textColor="#666" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="债券名称"
                    android:textColor="#666" />

                <com.myfp.myfund.ui.view.AlwaysMarqueeTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="市值(万元)"
                    android:textColor="#666" />

                <com.myfp.myfund.ui.view.AlwaysMarqueeTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="right"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="占净资产比"
                    android:textColor="#666" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ddd" />

            <ListView
                android:id="@+id/lv_bond_top5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ddd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:text="合计"
                    android:textColor="#666"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_bond_totalMarketValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#f00"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_bond_totalRatio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="#f00"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd" />
    </LinearLayout>

</ScrollView>